# cmake-test

./: CMakeLists.txt  MainComponent.cpp  MainComponent.h
MODULES/: CMakeLists.txt
MODULES/my_module/: my_module.cpp  my_module.h
MODULES/my_module/myclasses/: my_dsp.h  my_gui.cpp  my_gui.h
